--- a/ui/src/ChatApp.css
+++ b/ui/src/ChatApp.css
@@ -11,7 +11,7 @@
     /*position: absolute;*/
     width: calc(100% - 20px);
     max-width: 800px;
-    height: 500px;
+    height: 1000px;
     border-radius: 10px;
     background-color: #fff;
     top: 50%;
@@ -173,7 +173,7 @@
     color: gray;
   }
   .bottom_wrapper .send_message {
-    width: 140px;
+    width: 75px;
     height: 50px;
     display: inline-block;
     border-radius: 50px;
@@ -185,6 +185,26 @@
     text-align: center;
     float: right;
   }
+
+  .bottom_wrapper .add_image {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    border-radius: 50px;
+    background-color: #a3d063;
+    border: 2px solid #a3d063;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.2s linear;
+    text-align: center;
+    float: right;
+  }
+
+  .icon {
+    width: 50%;
+    height: 50%;
+  }
+
   .bottom_wrapper .send_message:hover {
     color: #a3d063;
     background-color: #fff;
